Added phplint, xmllint and license to composer

--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
-  "name":"ambimax/magento-deployscripts",
-  "description":"Collection of scripts for Magento builds and deployments",
-  "minimum-stability":"dev",
-  "authors":[
+  "name": "ambimax/magento-deployscripts",
+  "description": "Collection of scripts for Magento builds and deployments",
+  "minimum-stability": "dev",
+  "license": "MIT",
+  "authors": [
     {
-      "name":"Fabrizio Branca"
+      "name": "Fabrizio Branca"
     },
     {
       "name": "Tobias Schifftner"
@@ -14,6 +15,8 @@
     "install.sh",
     "n98-magerun.phar",
     "modman",
-    "project_reset.sh"
+    "project_reset.sh",
+    "phplint.sh",
+    "xmllint.sh"
   ]
 }
